gpu/gpu-orchestrator/resources/gpu-orchestrator.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpu-orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gpu-orchestrator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gpu-orchestrator
    spec:
      serviceAccountName: gpu-orchestrator
      containers:
        - name: gpu-orchestrator-image
          image: gpu-orchestrator-image
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "1000m"
              memory: "256Mi"
